local profile initiated

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,6 +34,40 @@ params {
 
 // Create profiles
 profiles {
+  local {
+    env {
+      RESOURCE_DIR = "$PWD/files"
+      OUTPUT_DIR = "$PWD/files/longGWAS_pipeline/results"
+      STORE_DIR = "$PWD/files/longGWAS_pipeline/results/cache"
+      ADDI_QC_PIPELINE = '/usr/src/ADDI-GWAS-QC-pipeline/addi_qc_pipeline.py'
+    }
+    process {
+      container = 'my-longgwas'
+      cpus = 2
+      withLabel: small {
+        cpus = 2
+        memory = '6 GB'
+      }
+      withLabel: medium {
+        cpus = 4
+        memory = '12 GB'
+      }
+      withLabel: large_mem {
+        cpus = 8
+        memory = '24 GB'
+      }
+    }
+    executor {
+      cpus = 8
+      name = 'local'
+      memory = '32 GB'
+    }
+    docker {
+      enabled = true
+      temp = 'auto'
+    }
+  }
+
   standard {
     env {
       RESOURCE_DIR = "$PWD/files"
